# BZ-Tag

./: .gitignore  LICENSE  PLAN.md  README.md  bz-tag_logo.ansi  main.py  pyproject.toml  requirements.txt
bztag/: __init__.py  app.py  batch.py  cover_art.py  file_list.py  models.py  tag_editor.py  tree_view.py  utils.py
